We now prevent data loss when scaling an image w/ animated transform masks.

The ideal long-term fix would be to modify transform
mask keyframes to account for new image size. When the image size changes, positioning
data should change to reflect new image sizing.

For now, this is enough to at least prevent data loss.

BUG:450781